fixed printing only first page in firefox
https://github.com/Semantic-Org/Semantic-UI/issues/3454
https://bugzilla.mozilla.org/show_bug.cgi?id=939897

*sigh*

It now spans 3 pages because there's a large gap between 'publications' and 'projects'. I'm not sure how to avoid that.

--- a/style.css
+++ b/style.css
@@ -22,6 +22,11 @@ section, span, div, table {
         width: 100%;
         margin: 0;
         padding: 0;
+        overflow-x: visible !important;
+    }
+    
+    .ui.grid {
+        display: block !important;
     }
 
     html, body {
